# 2024_graduation_project

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
shellscript/: launch.sh  local.sh  nohup.out
src/: lattice_planner_test.cpp
src/Control/autonomous_msgs/: CMakeLists.txt  package.xml
src/Control/autonomous_msgs/msg/: CtrlCmd.msg  EgoVehicleStatus.msg  LatticePathData.msg  PoseMsg.msg
src/Control/control/: CMakeLists.txt  package.xml
src/Control/control/src/: control.cpp
src/Control/planning/: CMakeLists.txt  package.xml
src/Control/planning/path/: Monday4_xy.csv  map_v2.csv  test.csv
src/Control/planning/src/: auto_drive.cpp  auto_drive_test.cpp  control.cpp  find_local_path.py  lattice_planner.cpp  pure_pursuit.cpp  rospack.cpp
src/Localization/: READ.md
src/Localization/localization/: CMakeLists.txt  package.xml
src/Localization/localization/bag/: rtk_v2.bag
src/Localization/localization/include/localization/: GPS.hpp  IMU.hpp  imu_deadreckoning.hpp
src/Localization/localization/launch/: EKF.launch  IMU.launch  Local.launch  localization.launch
src/Localization/localization/local_cfg/: localization.rviz
src/Localization/localization/map/: IMU_test_data.osm  Monday1.csv  Monday1.osm  Monday1_xy.csv  Monday3.bag  Monday3.csv  Monday3.osm  Monday3_xy.csv  Monday4.bag  Monday4.csv  Monday4.osm  Monday4_xy.csv  Monday_test.osm  Monday_test_xy.csv  Nocheon.csv  Nocheon.osm  Nocheon_xy.csv  engieneering_map.csv  engieneering_map.osm  engieneering_map_xy.csv  map_v1.csv  map_v1.osm  map_v2.csv  map_v2.osm  map_v3.csv  map_v3.osm  map_v4.osm  map_v4_xy.csv  map_v_test.osm  map_v_test_xy.csv  musical.csv  musical.osm  musical_xy.csv  soccer1.csv  soccer1.osm  soccer1_xy.csv  theater.csv  theater.osm  theater_xy.csv
src/Localization/localization/msg/: PoseMsg.msg
src/Localization/localization/src/: GPS.cpp  IMU.cpp  ekf.cpp  imu_deadreckoning.cpp  map_maker.cpp  map_visual.cpp
src/teleop/: CMakeLists.txt  package.xml
src/teleop/scripts/: teleop.py  tmp.py
